--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Smtp": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "Username": "sales@sarkprojects.in",
+    "Password": "B#85g(o!s"
+  },
+  "SmsSettings": {
+    "username": "",
+    "hashKey": ""
+  },
   "AllowedHosts": "*"
 }
