--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=103.120.179.189;port=3306;database=madhu_sarkprojects;Convert Zero Datetime=true;user=madhu_sark; password=M@he$h123",
-    //"DefaultConnection": "server=127.0.0.1;port=3306;database=sarkpayouts;Convert Zero Datetime=true;user=root; password=MYNEWPass",
+    //"DefaultConnection": "server=103.120.179.189;port=3306;database=madhu_sarkprojects;Convert Zero Datetime=true;user=madhu_sark; password=M@he$h123",
+    "DefaultConnection": "server=127.0.0.1;port=3306;database=sarkpayouts;Convert Zero Datetime=true;user=root; password=MYNEWPass",
     "ExcelConString": "Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR=YES'"
   },
   "Logging": {
